--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 html,
 body {
-	--custom-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	--custom-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	--custom-bg-color: #101010;
 	--custom-panel-color: #222;
 	--custom-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.8);
@@ -34,7 +35,7 @@ body,
 /* Grid */
 
 .container {
-	width: 90%;
+	width: 20%;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -109,7 +110,7 @@ body,
 @media only screen and (min-width: 33.75em) {
 	/* 540px */
 	.container {
-		width: 80%;
+		width: 20%;
 	}
 }
 
@@ -159,7 +160,7 @@ body,
 @media only screen and (min-width: 60em) {
 	/* 960px */
 	.container {
-		width: 75%;
+		width: 10%;
 		max-width: 60rem;
 	}
 }
